--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background: var(--color-dark-blue);
 }
 
 #root {
@@ -11,12 +10,13 @@
   --color-white-blue: #bdbddd;
   --color-white: #cdcdff;
   --color-grey-blue: #90a0d9;
-
+  
   --gap-projects: 1rem;
 }
 
 .App {
-  padding: 1rem;
+  background: var(--color-dark-blue);
+  padding: 0 3rem;
   height: 100vh;
 }
 
